--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,80 @@
 @tailwind components;
 @tailwind utilities;
 
+
+
+
+@layer base {
+    body {
+        @apply relative z-1 bg-whiten  text-base font-normal;
+    }
+}
+
+@layer components {
+}
+
+
+@layer utilities {
+    /* Chrome, Safari and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+        display: none;
+    }
+
+    .no-scrollbar {
+        -ms-overflow-style: none; /* IE and Edge */
+        scrollbar-width: none; /* Firefox */
+    }
+
+    .chat-height {
+        @apply h-[calc(100vh_-_8.125rem)] lg:h-[calc(100vh_-_5.625rem)];
+    }
+
+    .inbox-height {
+        @apply h-[calc(100vh_-_8.125rem)] lg:h-[calc(100vh_-_5.625rem)];
+    }
+}
+
+
+*::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+    transition: 0.3s background;
+}
+body *::-webkit-scrollbar-thumb {
+    background: #5B5D7A;
+}
+::-webkit-scrollbar {
+    width: 6px;
+    height: 1px;
+}
+::-webkit-scrollbar-thumb {
+    background-color: #5B5D7A;
+    border-radius: 20px;
+
+}
+::-webkit-scrollbar-track {
+    background-color: #152755;
+    border-radius: 5px;
+}
+.custom-scroll::-webkit-scrollbar {
+    width: 4px;
+    border-radius: 20px;
+}
+
+/* Track */
+.custom-scroll::-webkit-scrollbar-track {
+    background: #264596;
+}
+
+/* Handle */
+.custom-scroll::-webkit-scrollbar-thumb {
+    background: #fff;
+}
+
+/* Handle on hover */
+.custom-scroll::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
 [x-cloak] {
     display: none;
 }
@@ -365,3 +439,4 @@
     mix-blend-mode: multiply;
     opacity: 0.9;
 }
+
